--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,14 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+/generated/prisma
+
+# 繁體中文: Docker 與資料庫
+pgdata/
+.docker/
+postgres_data/
+
+# Prisma migrations（部署時由 Render 自動執行）
+prisma/migrations/
+
