fix: 修正 Render 部署錯誤 - 使用編譯後的 JS
- 變更 start script 為 node dist/server.js
- 更新 render.yaml buildCommand 加入 npm run build
- 調整 tsconfig.json rootDir 為根目錄

--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     region: singapore
     plan: free
     branch: main
-    buildCommand: npm install && npx prisma generate
+    buildCommand: npm install && npx prisma generate && npm run build
     startCommand: npm start
     healthCheckPath: /health
     envVars:
