--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     
     // 輸出檔案
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
