feat: 實作 Phase 1 身份驗證系統
- 新增 Role 列舉 (USER, ADMIN) 到 Prisma Schema
- 安裝 bcryptjs 和 jsonwebtoken 套件
- 建立共享資料庫連線 (src/db.ts)
- 實作 JWT 驗證中介軟體 (authMiddleware.ts)
- 實作身份驗證控制器 (authController.ts)
  * 使用者註冊 (POST /api/auth/register)
  * 管理員註冊 (POST /api/auth/register-admin)
  * 使用者登入 (POST /api/auth/login)
  * 取得個人資訊 (GET /api/auth/me)
- 建立驗證路由 (authRoutes.ts)
- 擴充 Express Request 型別定義支援 req.user
- 更新環境變數範例 (.env.example)

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# 繁體中文: 環境變數範例檔案
+# 環境變數範例檔案
 # 複製此檔案為 .env 並填入實際值
 
 # 資料庫連線字串
@@ -13,3 +13,9 @@ NODE_ENV="development"
 
 # 伺服器埠口（本地開發 8000，Render 自動設定為 10000）
 PORT=8000
+
+# JWT 密鑰（請替換為隨機字串，至少 32 字元）
+JWT_SECRET="your-jwt-secret-key-at-least-32-characters-long"
+
+# 管理員註冊金鑰（僅供初始化管理員帳號使用，生產環境請使用高強度隨機字串）
+ADMIN_SECRET="your-admin-secret-key-at-least-64-characters-long-for-security"
