--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  // 繁體中文: TypeScript 設定檔，支援 ESM 與 ts-node
+  // TypeScript 設定檔，支援 ESM 與 ts-node
   "compilerOptions": {
     // 輸出設定
     "target": "ES2020",
@@ -30,7 +30,8 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "types": ["node"]
+    "types": ["node"],
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   
   // ts-node ESM 支援設定
