feat(minigame): add drag-and-drop question reordering
- Add sortOrder field to QuizQuestion and MinorityQuestion models
- Implement PATCH /reorder API for both quiz and minority routes
- Update game logic to use sortOrder for auto-advance (nextCandidateId)
- Add init-sortorder script for existing data migration
- Update Render buildCommand to auto-initialize sortOrder on deploy

BREAKING CHANGE: Question order now follows sortOrder instead of ID
"@

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx watch server.ts",
     "start": "node dist/server.js",
     "build": "tsc",
+    "init-sortorder": "tsx prisma/init-sortorder.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
